# tauri-bun-vite

./: .env  .env.development  .env.production  .env.staging  .env.test  LICENSE  biome.json  bun.lockb  bunfig.toml  package.json  postcss.config.js  splashscreen.html  tsconfig.app.json  tsconfig.json  tsconfig.node.json  uno.config.ts  vite.config.ts
.github/workflows/: tauri-workflows.yml  workflow.yml
doc/: Bun安装和常用的命令.md  项目常用依赖的安装命令.md
docker/: Dockerfile
docker/PostgreSQL/: PostgreSQL 主从复制 + 读写分离.md  (+3 more)
docs/: GitHub Action和Tauri GitHub Action基本介绍.md  Tauri2常用插件.md  Umami 介绍和使用教程.md  Vue3常用的内置组件Transition、TransitionGroup、KeepAlive 和 Teleport 介绍.md  使用 Vue3 + TypeScript + SCSS 开发可复用的全局 通知（Notification） 和 提示框（Toast） 组件.md  使用 Vue3 + TypeScript + TailwindCSS 开发可复用的全局 通知（Notification） 和 提示框（Toast） 组件.md  前端项目目录结构.md  可复用的全局 UI 组件和Vue3内置组件的匹配关系.md  自定义封装 Hook 实现全局公共调用.md  项目常用依赖的命令列表.md  项目常用依赖的安装命令.md
mock/: db.json
plugins/: Vite插件的存放目录.md  consoleArt.ts  robots.ts  robots.txt 文件的使用和示例说明.md
public/: demo.rs
src/: App.vue  main.ts
src-tauri/: .env  Cargo.toml  tauri.conf.json5
src-tauri/capabilities/: desktop.json  mobile.json
src-tauri/resources/: tauri.android.conf.json5  tauri.ios.conf.json5  tauri.linux.conf.json5  tauri.macos.conf.json5  tauri.windows.conf.json5
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/barcodescanner/: mod.rs
src-tauri/src/core/nfc/: mod.rs
src-tauri/src/core/tray/: mod.rs  system_tray.rs  tray_menu.rs
src-tauri/src/core/updater/: mod.rs
(+131 files in other folders)
